# master-slave-pc-info-collect

./: CMakeLists.txt
src/: CMakeLists.txt  master.cpp  slave.cpp
src/hwloc/: CMakeLists.txt  main.cpp
src/leveldb/: CMakeLists.txt  ldb.cpp  ldb_test.cpp
src/proto/: CMakeLists.txt  pcinfo.proto  test.proto
src/sqlite/: CMakeLists.txt  new.cpp
src/tools/: CMakeLists.txt  PCInfoTools.cpp  PCInfoTools.h  main.cpp
